# makutra

./: .gitignore  .gitmodules  CMakeLists.txt
hello_world/: CMakeLists.txt
hello_world/di/: injectable.hppdi
hello_world/include/: injectable.hpp
hello_world/src/: injectable.cpp
makutra/: CMakeLists.txt  makutra.cpp  makutra.h
scripts/: build.sh  build_aggregator.sh  build_run_aggregator.sh  clear.sh
